--- a/echoes.html
+++ b/echoes.html
@@ -136,6 +136,50 @@
       margin-top: 6px;
       border-radius: 4px;
     }
+
+    /* Modal styling */
+    .modal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background-color: #111;
+      padding: 20px;
+      border-radius: 8px;
+      width: 80%;
+      max-width: 600px;
+      box-shadow: 0 0 20px #000;
+    }
+
+    #echoBody {
+      width: 100%;
+      height: 150px;
+      background: #000;
+      color: white;
+      border: 1px solid #333;
+      padding: 10px;
+      margin-top: 10px;
+    }
+
+    #submitEcho {
+      margin-top: 10px;
+      background: #333;
+      border: none;
+      color: white;
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    #submitEcho:hover {
+      background: #555;
+    }
   </style>
 </head>
 <body>
@@ -160,7 +204,16 @@
 
   <div id="threads"></div>
 
-  <!-- Firebase SDKs -->
+  <!-- Modal -->
+  <div class="modal" id="echoModal">
+    <div class="modal-content">
+      <div id="modalTitle"></div>
+      <textarea id="echoBody" placeholder="Write your echo..."></textarea>
+      <button id="submitEcho">Post Echo</button>
+    </div>
+  </div>
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 
@@ -182,23 +235,36 @@
     const postThread = document.getElementById("postThread");
     const threadsContainer = document.getElementById("threads");
 
+    const echoModal = document.getElementById("echoModal");
+    const echoBody = document.getElementById("echoBody");
+    const modalTitle = document.getElementById("modalTitle");
+    const submitEcho = document.getElementById("submitEcho");
+
+    let currentTitle = "";
+
     postThread.onclick = () => {
       const title = threadInput.value.trim();
       if (!title) return;
+      currentTitle = title;
+      modalTitle.textContent = `Echo: "${title}"`;
+      echoBody.value = "";
+      echoModal.style.display = "flex";
+    };
 
-      const content = prompt("Write your echo content:");
+    submitEcho.onclick = () => {
+      const content = echoBody.value.trim();
       if (!content) return;
 
       const now = Date.now();
       const thread = {
-        title,
+        title: currentTitle,
         content,
         timestamp: now,
         replies: {}
       };
 
-      const newRef = db.ref("echoes").push();
-      newRef.set(thread);
+      db.ref("echoes").push(thread);
+      echoModal.style.display = "none";
       threadInput.value = "";
     };
 
