--- a/echoes.html
+++ b/echoes.html
@@ -103,46 +103,24 @@
       cursor: pointer;
     }
 
-    .thread-header {
-      font-weight: bold;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .thread.expanded {
+      cursor: default;
     }
 
-    .thread-info {
-      font-size: 12px;
-      color: #bbb;
-      margin-left: 10px;
-      display: flex;
-      gap: 10px;
-    }
-
-    .thread-content {
+    .thread-content, .replyInputArea {
       display: none;
       margin-top: 10px;
     }
 
-    .replyInput {
-      width: 100%;
-      margin-top: 8px;
-      padding: 6px;
-      background-color: #111;
-      border: 1px solid #333;
-      color: white;
+    .thread.expanded .thread-content,
+    .thread.expanded .replyInputArea {
+      display: block;
     }
 
-    .replyButton {
-      margin-top: 4px;
-      padding: 6px 10px;
-      background-color: #333;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    .replyButton:hover {
-      background-color: #555;
+    .countdown, .thread-username {
+      font-size: 12px;
+      color: #aaa;
+      margin-left: 10px;
     }
 
     .reply {
@@ -152,6 +130,7 @@
       border-radius: 4px;
     }
 
+    /* Modal styling */
     .modal {
       position: fixed;
       top: 0; left: 0;
@@ -172,55 +151,38 @@
       box-shadow: 0 0 20px #000;
     }
 
-    #echoBody {
+    textarea, input {
       width: 100%;
-      height: 150px;
+      padding: 10px;
       background: #000;
       color: white;
       border: 1px solid #333;
-      padding: 10px;
       margin-top: 10px;
     }
 
-    #usernameInput {
-      width: 100%;
-      padding: 10px;
-      background-color: #000;
-      border: 1px solid #333;
-      color: white;
-      margin-top: 10px;
-    }
-
-    #submitEcho {
-      margin-top: 10px;
+    button {
       background: #333;
-      border: none;
       color: white;
+      border: none;
       padding: 10px;
+      margin-top: 10px;
       cursor: pointer;
     }
 
-    #submitEcho:hover {
+    button:hover {
       background: #555;
     }
 
-    #cancelEcho {
-      margin-top: 10px;
-      background: #222;
-      border: none;
-      color: white;
-      padding: 10px;
-      cursor: pointer;
-      margin-left: 10px;
+    .reply-meta {
+      font-size: 12px;
+      color: #888;
     }
   </style>
 </head>
 <body>
   <header>
-    ECHOES
-    <span id="navToggle">≡</span>
+    ECHOES <span id="navToggle">≡</span>
   </header>
-
   <div id="navMenu">
     <div onclick="location.href='index.html'">Home</div>
     <div onclick="location.href='view-profiles.html'">View Profiles</div>
@@ -233,27 +195,37 @@
   <div id="subtitle">Start a discussion that echoes through the void.</div>
 
   <div id="newThread">
-    <input id="threadInput" type="text" placeholder="Write something..." />
+    <input id="threadInput" type="text" placeholder="Thread title..." />
     <button id="postThread">Echo</button>
   </div>
 
   <div id="threads"></div>
 
+  <!-- Echo Modal -->
   <div class="modal" id="echoModal">
     <div class="modal-content">
       <div id="modalTitle"></div>
+      <input id="echoUsername" placeholder="Enter username (or leave blank for Anonymous)" />
       <textarea id="echoBody" placeholder="Write your echo..."></textarea>
-      <input id="usernameInput" type="text" placeholder="Enter your username (optional)">
-      <div style="display:flex; justify-content:flex-end;">
-        <button id="cancelEcho">Cancel</button>
-        <button id="submitEcho">Post Echo</button>
-      </div>
+      <button id="submitEcho">Post Echo</button>
+      <button onclick="echoModal.style.display='none'">Cancel</button>
     </div>
   </div>
 
+  <!-- Reply Modal -->
+  <div class="modal" id="replyModal">
+    <div class="modal-content">
+      <div id="replyModalTitle">Reply</div>
+      <input id="replyUsername" placeholder="Enter username (or leave blank for Anonymous)" />
+      <textarea id="replyBody" placeholder="Write your reply..."></textarea>
+      <button id="submitReply">Post Reply</button>
+      <button onclick="replyModal.style.display='none'">Cancel</button>
+    </div>
+  </div>
+
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
-
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyBP8eY_0FYMqZnbGlXRcQ7fFuyLMIKe5hY",
@@ -271,41 +243,43 @@
     const threadInput = document.getElementById("threadInput");
     const postThread = document.getElementById("postThread");
     const threadsContainer = document.getElementById("threads");
+
     const echoModal = document.getElementById("echoModal");
     const echoBody = document.getElementById("echoBody");
+    const echoUsername = document.getElementById("echoUsername");
     const modalTitle = document.getElementById("modalTitle");
     const submitEcho = document.getElementById("submitEcho");
-    const cancelEcho = document.getElementById("cancelEcho");
-    const usernameInput = document.getElementById("usernameInput");
 
-    let currentTitle = "";
+    const replyModal = document.getElementById("replyModal");
+    const replyBody = document.getElementById("replyBody");
+    const replyUsername = document.getElementById("replyUsername");
+    const submitReply = document.getElementById("submitReply");
+    let replyToThreadId = null;
 
     postThread.onclick = () => {
       const title = threadInput.value.trim();
       if (!title) return;
-      currentTitle = title;
       modalTitle.textContent = `Echo: "${title}"`;
       echoBody.value = "";
-      usernameInput.value = "";
+      echoUsername.value = "";
       echoModal.style.display = "flex";
-    };
-
-    cancelEcho.onclick = () => {
-      echoModal.style.display = "none";
     };
 
     submitEcho.onclick = () => {
       const content = echoBody.value.trim();
-      const username = usernameInput.value.trim() || "Anonymous";
-      if (!content) return;
+      const username = echoUsername.value.trim() || "Anonymous";
+      const title = threadInput.value.trim();
+      if (!content || !title) return;
+
       const now = Date.now();
       const thread = {
-        title: currentTitle,
+        title,
         content,
         timestamp: now,
-        replies: {},
-        username
+        username,
+        replies: {}
       };
+
       db.ref("echoes").push(thread);
       echoModal.style.display = "none";
       threadInput.value = "";
@@ -327,72 +301,87 @@
 
         const threadDiv = document.createElement("div");
         threadDiv.className = "thread";
+        threadDiv.onclick = () => {
+          threadDiv.classList.toggle("expanded");
+        };
 
         const header = document.createElement("div");
-        header.className = "thread-header";
-
-        const titleSpan = document.createElement("span");
-        titleSpan.textContent = thread.title;
-
-        const infoSpan = document.createElement("span");
-        infoSpan.className = "thread-info";
-        infoSpan.innerHTML = `<span>${thread.username}</span> <span id="timer-${id}"></span>`;
-
-        header.appendChild(titleSpan);
-        header.appendChild(infoSpan);
+        header.innerHTML = `<strong>${thread.title}</strong>
+          <span class="countdown" id="timer-${id}"></span>
+          <span class="thread-username">${thread.username || "Anonymous"}</span>`;
         threadDiv.appendChild(header);
 
         const contentDiv = document.createElement("div");
         contentDiv.className = "thread-content";
-        contentDiv.innerHTML = `
-          <div>${thread.content}</div>
-          <div id="replies-${id}"></div>
-          <input class="replyInput" id="replyInput-${id}" placeholder="Reply..." />
-          <button class="replyButton" onclick="postReply('${id}')">Post</button>
-        `;
+        contentDiv.textContent = thread.content;
         threadDiv.appendChild(contentDiv);
 
-        header.onclick = () => {
-          contentDiv.style.display = contentDiv.style.display === "none" ? "block" : "none";
+        const repliesDiv = document.createElement("div");
+        repliesDiv.id = `replies-${id}`;
+        repliesDiv.className = "thread-content";
+        if (thread.replies) {
+          Object.values(thread.replies).forEach(r => {
+            const reply = document.createElement("div");
+            reply.className = "reply";
+            reply.innerHTML = `<div>${r.text}</div><div class="reply-meta">${r.username || "Anonymous"}</div>`;
+            repliesDiv.appendChild(reply);
+          });
+        }
+        threadDiv.appendChild(repliesDiv);
+
+        const replyButton = document.createElement("button");
+        replyButton.textContent = "Reply";
+        replyButton.onclick = (e) => {
+          e.stopPropagation();
+          replyModal.style.display = "flex";
+          replyToThreadId = id;
         };
+
+        const replyArea = document.createElement("div");
+        replyArea.className = "replyInputArea thread-content";
+        replyArea.appendChild(replyButton);
+        threadDiv.appendChild(replyArea);
 
         threadsContainer.appendChild(threadDiv);
         startCountdown(`timer-${id}`, thread.timestamp, id);
-
-        const repliesDiv = contentDiv.querySelector(`#replies-${id}`);
-        if (thread.replies) {
-          Object.values(thread.replies).forEach(reply => {
-            const r = document.createElement("div");
-            r.className = "reply";
-            r.textContent = reply;
-            repliesDiv.appendChild(r);
-          });
-        }
       });
     }
 
-    function postReply(threadId) {
-      const input = document.getElementById(`replyInput-${threadId}`);
-      const replyText = input.value.trim();
-      if (!replyText) return;
-      db.ref(`echoes/${threadId}/replies`).push(replyText);
-      db.ref(`echoes/${threadId}/timestamp`).set(Date.now()); // bump timer
-      input.value = "";
-    }
+    submitReply.onclick = () => {
+      const text = replyBody.value.trim();
+      const username = replyUsername.value.trim() || "Anonymous";
+      if (!text || !replyToThreadId) return;
+
+      const reply = { text, username };
+      db.ref(`echoes/${replyToThreadId}/replies`).push(reply);
+
+      // bump echo timer by 5 min
+      db.ref(`echoes/${replyToThreadId}/timestamp`).once("value", snap => {
+        const current = snap.val();
+        db.ref(`echoes/${replyToThreadId}/timestamp`).set(current + 5 * 60 * 1000);
+      });
+
+      replyModal.style.display = "none";
+      replyBody.value = "";
+      replyUsername.value = "";
+    };
 
     function startCountdown(elementId, startTime, threadId) {
       const el = document.getElementById(elementId);
       function update() {
         const now = Date.now();
-        const remaining = 10 * 60 * 1000 - (now - startTime);
-        if (remaining <= 0) {
-          db.ref("echoes/" + threadId).remove();
-          return;
-        }
-        const minutes = Math.floor(remaining / 60000);
-        const seconds = Math.floor((remaining % 60000) / 1000);
-        el.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-        requestAnimationFrame(update);
+        db.ref(`echoes/${threadId}/timestamp`).once("value", snap => {
+          const ts = snap.val();
+          const remaining = 10 * 60 * 1000 - (now - ts);
+          if (remaining <= 0) {
+            db.ref("echoes/" + threadId).remove();
+            return;
+          }
+          const minutes = Math.floor(remaining / 60000);
+          const seconds = Math.floor((remaining % 60000) / 1000);
+          el.textContent = `— ${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
+          requestAnimationFrame(update);
+        });
       }
       update();
     }
